--- a/webapp/qna/show.html
+++ b/webapp/qna/show.html
@@ -175,7 +175,7 @@
                               <div class="form-group" style="padding:14px;">
                                   <textarea class="form-control" placeholder="Update your status"></textarea>
                               </div>
-                              <button class="btn btn-success pull-right" type="button">Post</button>
+                              <button class="btn btn-success pull-right" type="button">답변하기</button>
                               <div class="clearfix" />
                           </form>
                       </div>
@@ -185,7 +185,35 @@
         </div>
     </div>
 </div>
-
+<script type="text/template" id="answerTemplate">
+	<article class="article">
+		<div class="article-header">
+			<div class="article-header-thumb">
+				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+			</div>
+			<div class="article-header-text">
+				{0}
+				<div class="article-header-time">{1}</div>
+			</div>
+		</div>
+		<div class="article-doc comment-doc">
+			{2}
+		</div>
+		<div class="article-util">
+		<ul class="article-util-list">
+			<li>
+				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+			</li>
+			<li>
+				<form class="form-delete" action="/api/qna/deleteAnswer" method="POST">
+					<input type="hidden" name="answerId" value="{4}" />
+					<button type="submit" class="link-delete-article">삭제</button>
+				</form>
+			</li>
+		</ul>
+		</div>
+	</article>
+</script>
 <!-- script references -->
 <script src="../js/jquery-2.2.0.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
