--- a/webapp/qna/show.html
+++ b/webapp/qna/show.html
@@ -185,6 +185,7 @@
         </div>
     </div>
 </div>
+
 <script type="text/template" id="answerTemplate">
 	<article class="article">
 		<div class="article-header">
@@ -192,7 +193,7 @@
 				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
 			</div>
 			<div class="article-header-text">
-				{0}
+				<a href="#" class="article-author-name">{0}</a>
 				<div class="article-header-time">{1}</div>
 			</div>
 		</div>
@@ -205,8 +206,7 @@
 				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
 			</li>
 			<li>
-				<form class="form-delete" action="/api/qna/deleteAnswer" method="POST">
-					<input type="hidden" name="answerId" value="{4}" />
+				<form class="form-delete delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
 					<button type="submit" class="link-delete-article">삭제</button>
 				</form>
 			</li>
@@ -214,6 +214,7 @@
 		</div>
 	</article>
 </script>
+
 <!-- script references -->
 <script src="../js/jquery-2.2.0.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
